--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,10 +1,11 @@
+<div class="container">
 <p class="mt-4">Dodaj nowe zadanie</p>
 <input type="text" #name class="form-control" name="todo">
 <button type="button" class="btn btn-primary mt-3" (click)="addTodo(name.value)">Dodaj zadanie</button>
 
-<div class="mt-5">
+<div class="mt-4">
     <h4>Zadania:</h4>
-    <ul class="list-group todos-list">
+    <ul class="list-group todos-list" *ngIf="todos.length > 0; else noTask">
         <li class="list-group-item" *ngFor="let todo of todos; index as i">
             <input type ="checkbox"
             class="form-check-input my-1"
@@ -13,4 +14,7 @@
             <span class="todo-item">{{i + 1 }}. {{ todo.name }}</span>
         </li>
     </ul>
+    <!-- <h5 *ngIf="todos.length === 0">Aktualnie brak zadań</h5> -->
+    <ng-template #noTask>Aktualnie brak zadań</ng-template>
+</div>
 </div>
