--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -10,8 +10,8 @@
             <input type ="checkbox"
             class="form-check-input my-1"
             [checked]="todo.isComplete"
-            (change)="changeTodoStatus(i)"
-            
+            (change)="changeTodoStatus(todo)"
+
             >
             <span class="todo-item">{{i + 1 }}. {{ todo.name }}</span>
         </li>
