--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,10 +3,7 @@
 <input type="text" #name class="form-control" name="todo">
 <button type="button" class="btn btn-primary mt-3" (click)="addTodo(name.value)">Dodaj zadanie</button>
 
-<div class="alert alert-warning alert-dismissible fade show mt-2" role="alert" *ngIf="errorMessage">
-    {{errorMessage}}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="clearErrorMessage()"></button>
-</div>
+<app-alert *ngIf="errorMessages" [errorMessage]="errorMessages"></app-alert>
 
 <div class="mt-4">
     <h4>Zadania:</h4>
@@ -24,10 +21,4 @@
     <h5 *ngIf="todos.length === 0">Aktualnie brak zadań</h5>
     <!-- <ng-template #noTask>Aktualnie brak zadań</ng-template> -->
 </div>
-</div>
-
-<div [ngSwitch]="testSwitchCase">
-    <p *ngSwitchCase="'tak'">Wyświetlam tak!</p>
-    <p *ngSwitchCase="'nie'">Wyświetlam nie!</p>
-    <p *ngSwitchDefault>Wyświetlam default</p>
 </div>
