--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,7 +3,7 @@
 <input type="text" #name class="form-control" name="todo">
 <button type="button" class="btn btn-primary mt-3" (click)="addTodo(name.value)">Dodaj zadanie</button>
 
-<app-alert *ngIf="errorMessages" [errorMessage]="errorMessages"></app-alert>
+<app-alert *ngIf="errorMessages" [errorMessage]="errorMessages" (clearMessage)="clearErrorMessage()"></app-alert>
 
 <div class="mt-4">
     <h4>Zadania:</h4>
