--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -5,15 +5,9 @@
 <div class="mt-4">
     <h4>Zadania:</h4>
     <ul class="list-group todos-list" *ngIf="todos.length > 0">
-        <li class="list-group-item" *ngFor="let todo of todos; index as i">
-            <input type ="checkbox"
-            class="form-check-input my-1"
-            [checked]="todo.isComplete"
-            (change)="changeTodoStatus(todo)"
-
-            >
-            <span class="todo-item" [ngClass]="{'text-decoration-line-through' : todo.isComplete}">{{i + 1 }}. {{ todo.name }}</span>
-        </li>
+        <ng-container *ngFor="let todo of todos; index as i">
+            <app-todo [todo]="todo" [i]="i"></app-todo>
+        </ng-container>
     </ul>
     <h5 *ngIf="todos.length === 0">Aktualnie brak zadań</h5>
     <!-- <ng-template #noTask>Aktualnie brak zadań</ng-template> -->
