--- a/src/app/todo-list/todo/todo.component.html
+++ b/src/app/todo-list/todo/todo.component.html
@@ -9,7 +9,7 @@
 </li>
 <app-modal *ngIf="openModal" (close)="toggleModal()" [title]="'czy na pewno chcesz usunąć zadanie o numerze' + (i + 1) + '?'">
     <div class="d-flex justify-content-end">
-        <button class="btn btn-danger btn-sm mx-2">Usuń</button>
-    <button class="btn btn-info btn-sm mx-2">Anuluj</button>
+        <button class="btn btn-danger btn-sm mx-2" (click)="deleteTodo()">Usuń</button>
+        <button class="btn btn-info btn-sm mx-2" (click)="toggleModal()">Anuluj</button>
     </div>
 </app-modal>
