--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -3,6 +3,8 @@
     <span class="close-btn" (click)="onClose()">
         x
     </span>
+    <ng-content select="[up]"></ng-content>
     <h4>{{title}}</h4>
     <ng-content></ng-content>
+    <ng-content select=".p-down"></ng-content>
 </div>
