--- a/src/app/todo-list/todo/todo.component.html
+++ b/src/app/todo-list/todo/todo.component.html
@@ -7,6 +7,19 @@
     <span class="todo-item" [ngClass]="{'text-decoration-line-through' : todo.isComplete}">{{i + 1 }}. {{ todo.name }}</span>
 <button type="button" class="btn btn-danger btn-sm mx-2" (click)="toggleModal()">Usuń</button>
 </li>
+<p>{{todo.name}}</p>
+<p>{{todo.name | uppercase}}</p>
+<p>{{todo}}</p>
+<p>{{todo | json}}</p>
+<pre><p>{{todo | json}}</p></pre>
+
+<p>{{'test tytułu'| titlecase}}</p>
+<p>{{'przytnij'| slice: 0: 4 }}</p>
+
+<p *ngFor="let item of keyValueTest | keyvalue">
+    {{item.key}}: {{item.value}}
+</p>
+
 <app-modal *ngIf="openModal" (close)="toggleModal()" [title]="'czy na pewno chcesz usunąć zadanie o numerze' + (i + 1) + '?'">
     <div class="d-flex justify-content-end">
         <button class="btn btn-danger btn-sm mx-2" (click)="deleteTodo()">Usuń</button>
