--- a/src/app/todo-list/todo/todo.component.html
+++ b/src/app/todo-list/todo/todo.component.html
@@ -13,10 +13,10 @@
 <p>{{'2023-12-24' | date}}</p>
 
 <p>Pl</p>
-<p>{{1.3 | number: '': 'pl'}}</p>
-<p>{{0.25 | percent: '': 'pl'}}</p>
-<p>{{10 | currency: 'PLN': 'code': '': 'pl'}}</p>
-<p>{{'2023-12-24' | date: 'fullDate': '': 'pl'}}</p>
+<p>{{1.3 | number: ''}}</p>
+<p>{{0.25 | percent: ''}}</p>
+<p>{{10 | currency: 'PLN': 'code': ''}}</p>
+<p>{{'2023-12-24' | date: 'fullDate': ''}}</p>
 <app-modal *ngIf="openModal" (close)="toggleModal()" [title]="'czy na pewno chcesz usunąć zadanie o numerze' + (i + 1) + '?'">
     <div class="d-flex justify-content-end">
         <button class="btn btn-danger btn-sm mx-2" (click)="deleteTodo()">Usuń</button>
