--- a/src/app/todo-list/todo/todo.component.html
+++ b/src/app/todo-list/todo/todo.component.html
@@ -7,16 +7,7 @@
     <span class="todo-item" [ngClass]="{'text-decoration-line-through' : todo.isComplete}">{{i + 1 }}. {{ todo.name }}</span>
 <button type="button" class="btn btn-danger btn-sm mx-2" (click)="toggleModal()">Usuń</button>
 </li>
-<p>{{1.3 | number}}</p>
-<p>{{0.25 | percent}}</p>
-<p>{{10 | currency}}</p>
-<p>{{'2023-12-24' | date}}</p>
-
-<p>Pl</p>
-<p>{{1.3 | number: ''}}</p>
-<p>{{0.25 | percent: ''}}</p>
-<p>{{10 | currency: 'PLN': 'code': ''}}</p>
-<p>{{'2023-12-24' | date: 'fullDate': ''}}</p>
+<p>{{'test manualny' | uppercase | slice: 0: 3}}</p>
 <app-modal *ngIf="openModal" (close)="toggleModal()" [title]="'czy na pewno chcesz usunąć zadanie o numerze' + (i + 1) + '?'">
     <div class="d-flex justify-content-end">
         <button class="btn btn-danger btn-sm mx-2" (click)="deleteTodo()">Usuń</button>
