--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -3,7 +3,7 @@
     <span class="close-btn" (click)="onClose()">
         x
     </span>
-    <p>{{obs$ | async}}</p>
+    <!-- <p>{{obs$ | async}}</p> -->
     <h4>{{title}}</h4>
     <ng-content></ng-content>
 </div>
