--- a/src/app/todo-list/add-todo-form/add-todo-form.component.html
+++ b/src/app/todo-list/add-todo-form/add-todo-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="addNewTodo()">
+<form #form='ngForm' (ngSubmit)="addNewTodo()">
     <p class="mt-4">Dodaj nowe zadanie</p>
     <input type="text" #name [(ngModel)]="todoName" class="form-control" name="todo">
     <button type="submit" class="btn btn-primary mt-3">Dodaj zadanie</button>
