--- a/src/app/todo-list/add-todo-form/add-todo-form.component.html
+++ b/src/app/todo-list/add-todo-form/add-todo-form.component.html
@@ -1,7 +1,7 @@
 <form #form='ngForm' (ngSubmit)="addNewTodo()">
     <p class="mt-4">Dodaj nowe zadanie</p>
-    <input type="text" #name [(ngModel)]="todoName" class="form-control" name="todo">
-    <button type="submit" class="btn btn-primary mt-3">Dodaj zadanie</button>
+    <input type="text" required minlength="4" maxlength="50" #name [(ngModel)]="todoName" class="form-control" name="todo">
+    <button type="submit" class="btn btn-primary mt-3" [disabled]="!form.valid">Dodaj zadanie</button>
 </form>
 
 
