L91 implementacja komunikatow o bledach walidacji

--- a/src/app/todo-list/add-todo-form/add-todo-form.component.html
+++ b/src/app/todo-list/add-todo-form/add-todo-form.component.html
@@ -1,6 +1,12 @@
-<form #form='ngForm' (ngSubmit)="addNewTodo()">
+<form #form='ngForm' (ngSubmit)="addNewTodo(form)">
     <p class="mt-4">Dodaj nowe zadanie</p>
     <input type="text" required minlength="4" maxlength="50" #name [(ngModel)]="todoName" class="form-control" name="todo">
+    <ng-container *ngIf="form.controls['todo']?.invalid && (form.controls['todo']?.touched || form.controls['todo']?.dirty)">
+        <app-alert *ngIf="form.controls['todo']?.errors?.['required']" [errorMessage]="'Ta kontrolka nie moze być pusta'"></app-alert>
+        <app-alert *ngIf="form.controls['todo']?.errors?.['minlength']" [errorMessage]="'Ta kontrolka musi miec min 4 znaki'"></app-alert>
+        <app-alert *ngIf="form.controls['todo']?.errors?.['maxlength']" [errorMessage]="'Ta kontrolka nie moze miec wiecej niz 50 znaków'"></app-alert>    
+    </ng-container>
+    
     <button type="submit" class="btn btn-primary mt-3" [disabled]="!form.valid">Dodaj zadanie</button>
 </form>
 
