--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-todo-list></app-todo-list>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
