--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbar-nav">
             <ul class="navbar-nav">
                 <li class="navbar-item">
-                    <a routerLink="" class="nav-link text-white">Strona główna</a>
+                    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Strona główna</a>
                 </li>
                 <li class="navbar-item">
-                    <a routerLink="todo" class="nav-link text-white">Todo</a>
+                    <a routerLink="todo" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Todo</a>
                 </li>
             </ul>
         </div>
