--- a/src/app/todo-details/todo-details.component.html
+++ b/src/app/todo-details/todo-details.component.html
@@ -1,1 +1,11 @@
-<p>todo-details works!</p>
+<div class="mt-3">
+    <p *ngIf="!todo">Nie ma zadania o podanym numerze indeksu!</p>
+    
+    <div *ngIf="todo">
+        <p>Treść zadania: {{todo.name}}</p>
+        <p>Czy zadanie zostało ukonczone: {{todo.isComplete ? 'tak' : 'nie'}}</p>
+
+        <p>Przejdz do kolejnego zadanie:</p>
+        <button class="btn btn-sm btn-info" (click)="navigateToNextTodo()">Następne zadanie</button>
+    </div>
+</div>
