L111 serwis Location i cofanie się do poprzedniej strony metoda back()

--- a/src/app/todo-details/todo-details.component.html
+++ b/src/app/todo-details/todo-details.component.html
@@ -5,7 +5,8 @@
         <p>Treść zadania: {{todo.name}}</p>
         <p>Czy zadanie zostało ukonczone: {{todo.isComplete ? 'tak' : 'nie'}}</p>
 
-        <p>Przejdz do kolejnego zadanie:</p>
+        <p>Przejdz do kolejnego zadania lub wróć do poprzedniej strony:</p>
+        <button class="btn btn-sm btn-info mx-2" (click)="navigateBack()">Powrót</button>
         <button class="btn btn-sm btn-info" (click)="navigateToNextTodo()">Następne zadanie</button>
     </div>
 </div>
