L112 child routes (nested routes)

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -13,3 +13,16 @@
     <!-- <ng-template #noTask>Aktualnie brak zadań</ng-template> -->
 </div>
 </div>
+
+<div class="mt-5">
+    <h4>Child routes:</h4>
+    <ul>
+        <li>
+            <a routerLink="/todo/child-a">Child a</a>
+        </li>
+        <li>
+            <a routerLink="/todo/child-b"> Child b</a>
+        </li>
+    </ul>
+    <router-outlet></router-outlet>
+</div>
