--- a/src/app/todo-details/todo-details.component.html
+++ b/src/app/todo-details/todo-details.component.html
@@ -1,7 +1,8 @@
 <div class="mt-3">
-    <p *ngIf="!todo">Nie ma zadania o podanym numerze indeksu!</p>
     
-    <div *ngIf="todo">
+    
+    <app-alert *ngIf="errorMessages" [errorMessage]="errorMessages" (clearMessage)="clearErrorMessage()"></app-alert>
+    <div *ngIf="todo && !errorMessages">
         <p>Treść zadania: {{todo.name}}</p>
         <p>Czy zadanie zostało ukonczone: {{todo.isComplete ? 'tak' : 'nie'}}</p>
 
